[gd_scene load_steps=9 format=3 uid="uid://bolriybdlj0fr"]

[ext_resource type="Script" path="res://scenes/enemy/melee_enemy.gd" id="1_jmkbw"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="2_7luxp"]
[ext_resource type="Texture2D" uid="uid://bwt2rwwak7xw5" path="res://assets/Minifantasy_Creatures_v3.2_Free_Version/Minifantasy_Creatures_Assets/Undead/Skeleton/SkeletonWalk.png" id="3_1q5sb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muwdd"]
size = Vector2(20.1875, 20.3125)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1pp3"]
atlas = ExtResource("3_1q5sb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxaw5"]
atlas = ExtResource("3_1q5sb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_616oh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1pp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxaw5")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rh1x3"]
radius = 148.003

[node name="range enemy" type="Node2D"]
script = ExtResource("1_jmkbw")

[node name="hurtbox" type="Area2D" parent="."]
script = ExtResource("2_7luxp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
visibility_layer = 3
position = Vector2(0.90625, -1.84375)
shape = SubResource("RectangleShape2D_muwdd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_616oh")
autoplay = "default"
frame_progress = 0.382327

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(17, 0)

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-17, 0)

[node name="RayCastdown" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(12, 11)

[node name="RayCastdown2" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-12, 10)

[node name="player detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player detection"]
shape = SubResource("CircleShape2D_rh1x3")

[node name="finitestatemachine re" type="Node2D" parent="."]

[node name="idle" type="Node2D" parent="finitestatemachine re"]

[node name="attack" type="Node2D" parent="finitestatemachine re"]
